k8s-manifests/backend.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend-deployment
  namespace: dev

spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend-container
          image: rajatrulaniya/devsecops-backend:latest
          ports:
            - containerPort: 5000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

---
apiVersion: v1
kind: Service

metadata:
  name: backend
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
