k8s-manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"

spec:
  ingressClassName: nginx
  rules:
    - host: devsecops.rajatrulaniya.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5000
          
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80

  tls:
    - hosts:
        - devsecops.rajatrulaniya.com
      secretName: rajatrulaniya-co-tls
